// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_ol8ybj0 uv_ol8ybj1 uv_ol8ybj5 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir9377"
        >
          <div
            class="uv_mxir930 uv_mxir932j"
          >
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="hours-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_ol8ybja uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                :
              </span>
            </div>
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="minutes-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_ol8ybja uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                :
              </span>
            </div>
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="seconds-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_8_"
        >
          Test
        </label>
        <div
          class="uv_ol8ybj0 uv_ol8ybj1 uv_ol8ybj5 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir9377"
        >
          <div
            class="uv_mxir930 uv_mxir932j"
          >
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="hours-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_ol8ybja uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                :
              </span>
            </div>
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="minutes-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_ol8ybja uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                :
              </span>
            </div>
            <div
              class="uv_mxir930 uv_mxir932j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_ol8ybj8"
                data-size="large"
                data-testid="seconds-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
